openafs (1.3.87-1) unstable; urgency=low

  * New upstream version.

 --

openafs (1.3.82-2) unstable; urgency=low

  * Output error messages from heredocs in the init script with cat rather
    than echo.  Thanks, Reid Barton.  (Closes: #311729)
  * Make bosserver less picky about permissions and remove the attempt to
    set /etc/openafs/server-local not-world-readable since dh_fixperms was
    overridding it anyway.  (Closes: #312921)
  * Fix some spacing and capitalization errors in the debconf templates.
    Thanks, Clytie Siddall.  (Closes: #316597)
  * Initial Czech translation, thanks Martin Sin.  (Closes: #310699)
  * New Vietnamese translation, thanks Clytie Siddall.  (Closes: #316598)
  * Update standards version to 3.6.2 (no changes required).

 -- Russ Allbery <rra@stanford.edu>  Mon, 11 Jul 2005 17:34:13 -0700

openafs (1.3.82-1) unstable; urgency=medium

  * New upstream version.  (Closes: #307699)
    - Proper locking for preempt kernels.  This bug manifested as an
      inability to shut down AFS cleanly.  (Closes: #308399, #304040)
    - Correctly handle the inotify semaphore.  (Closes: #303495)
  * Repackage upstream to remove MacOS-specific files covered by the APSL.
    Remove the WINNT directory to save space since we have to repackage
    anyway.  Provide a get-orig-source target to do the repackaging.
  * libpam-openafs-kaserver: Fix compilation so that the PAM module isn't
    missing symbols and therefore unusable.  (Closes: #308844)
  * Apply patch from Chas Williams to fix stale cache data from deleted
    files, a bug introduced in 1.3.82.
  * In all cases, only build the module appropriate to the kernel we're
    building against.  Building an SMP module against a non-SMP kernel
    fails due to missing defines.  (Closes: #225907)
  * README.modules: Add documentation for module-assistant and recommend
    it when using Debian kernels.  Mention divergences from upstream in