@@ -1,80 +1,87 @@
 #!/bin/sh
+
+if [ x"$KVERS" = x ] ; then
+    echo "ERROR: no kernel version" >&2
+    echo "  ($KSRC/include/linux/version.h not found?)" >&2
+    echo UNKNOWN
+    exit 1
+fi
+
 case `arch` in
 i[3456]86)
-	case $KVERS in
-	    2.2*)
-		echo i386_linux22
-		;;
-	    2.4*)
-		echo i386_linux24
-		;;
-	    2.6*)
-	        echo i386_linux26
-		;;
-	    esac
-;;
+    case $KVERS in
+    2.2*)
+        echo i386_linux22
+        ;;
+    2.4*)
+        echo i386_linux24
+        ;;
+    2.6*)
+        echo i386_linux26
+        ;;
+    esac
+    ;;
 x86_64)
-	case $KVERS in
-	    2.4*)
-		echo amd64_linux24
-		;;
-	    2.6*)
-	        echo amd64_linux26
-		;;
-	    esac
-;;
-    ia64)
+    case $KVERS in
+    2.4*)
+        echo amd64_linux24
+        ;;
+    2.6*)
+        echo amd64_linux26
+        ;;
+    esac
+    ;;
+ia64)
     echo ia64_linux24
-;;
-    alpha)
-	case $KVERS in
-	    2.2*)
-		echo alpha_linux_22
-		;;
-	    2.4*)
-		echo alpha_linux_24
-		;;
-	    esac
-;;
-    sparc)
-	case $KVERS in
-	    2.2*)
-		echo sparc_linux22
-		;;
-	    2.4*)
-		echo sparc_linux24
-		;;
-	    esac
-	;;
-    sparc64)
-        case $KVERS in
-	    2.2*)
-		echo sparc64_linux22
-		;;
-	    2.4*)
-		echo sparc64_linux24
-		;;
-	    esac
-	;;
-	    
-    ppc)
-	case $KVERS in
-	    2.2*)
-		echo ppc_linux22
-		;;
-	    2.4*)
-		echo ppc_linux24
-		;;
-	    2.6)
-	        echo ppc_linux26
-		;;
-	    esac
-	    ;;
-    s390)
-        echo s390_linux24
-	;;
-    *)
-	echo ERROr:  sysname not yet known
-	exit 1
-
+    ;;
+alpha)
+    case $KVERS in
+    2.2*)
+        echo alpha_linux_22
+        ;;
+    2.4*)
+        echo alpha_linux_24
+        ;;
+    esac
+    ;;
+sparc)
+    case $KVERS in
+    2.2*)
+        echo sparc_linux22
+        ;;
+    2.4*)
+        echo sparc_linux24
+        ;;
+    esac
+    ;;
+sparc64)
+    case $KVERS in
+    2.2*)
+        echo sparc64_linux22
+        ;;
+    2.4*)
+        echo sparc64_linux24
+        ;;
+    esac
+    ;;
+ppc)
+    case $KVERS in
+    2.2*)
+        echo ppc_linux22
+        ;;
+    2.4*)
+        echo ppc_linux24
+        ;;
+    2.6)
+        echo ppc_linux26
+        ;;
+    esac
+    ;;
+s390)
+    echo s390_linux24
+    ;;
+*)
+    echo "ERROR: unsupported architecture" >&2
+    echo UNKNOWN
+    exit 1
 esac
